plugins {
    id 'net.minecraftforge.gradle' version '[6.0,6.2)'
    id 'com.github.johnrengelman.shadow' version '8.1.1'
    id 'org.spongepowered.mixin' version '0.7-SNAPSHOT'
}

group = 'io.github.vkkkv'
archivesBaseName = 'rimine'
version = '1.0.0'

minecraft {
    mappings channel: 'official', version: '1.20.1'

    accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')

    runs {
        client {
            workingDirectory project.file('run')
            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.level', 'debug'
            mods {
                rimine {
                    source sourceSets.main
                }
            }
        }

        server {
            workingDirectory project.file('run')
            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.level', 'debug'
            args '--nogui'
            mods {
                rimine {
                    source sourceSets.main
                }
            }
        }
    }
}

java {
    toolchain.languageVersion = JavaLanguageVersion.of(17)
    withSourcesJar()
    withJavadocJar()
}

jar {
    from(rootProject.file("LICENSE")) {
        rename { "${it}_${mod_name}" }
    }
    manifest {
        attributes([
            'Specification-Title'     : mod_name,
            'Specification-Vendor'    : mod_author,
            'Specification-Version'   : project.jar.archiveVersion,
            'Implementation-Title'    : project.name,
            'Implementation-Version'  : project.jar.archiveVersion,
            'Implementation-Vendor'   : mod_author,
            'Implementation-Timestamp': new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
            'Timestamp'               : System.currentTimeMillis(),
            'Built-On-Java'           : "${System.getProperty('java.vm.version')} (${System.getProperty('java.vm.vendor')})",
            'Built-On-Minecraft'      : minecraft_version
        ])
    }
}

sourcesJar {
    from(rootProject.file("LICENSE")) {
        rename { "${it}_${mod_name}" }
    }
}

tasks.withType(JavaCompile).configureEach {
    it.options.encoding = 'UTF-8'
    it.options.getRelease().set(17)
}

processResources {
    var replaceProperties = [
        version                      : project.version,
        minecraft_version            : minecraft_version,
        forge_minecraft_version_range: forge_minecraft_version_range,
        forge_version                : forge_version,
        forge_version_range          : forge_version_range,
        loader_version_range         : loader_version_range,
        mod_id                       : mod_id,
        mod_name                     : mod_name,
        mod_version                  : findProperty('mod_version') ?: project.jar.archiveVersion,
        mod_license                  : mod_license,
        mod_author                   : mod_author,
        mod_credits                  : mod_credits,
        mod_description              : mod_description,
        mod_url                      : mod_url,
        mod_issue_tracker_url        : mod_issue_tracker_url,
    ]
    inputs.properties replaceProperties
    filesMatching(['pack.mcmeta', 'META-INF/mods.toml', '*.mixins.json']) {
        expand replaceProperties
    }
}

tasks.withType(GenerateModuleMetadata).configureEach {
    enabled = false
}

dependencies {
    minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"

    implementation "net.java.dev.jna:jna:5.14.0"

    // Mixin dependencies
    implementation "org.spongepowered:mixin:0.8.5"
    annotationProcessor "org.spongepowered:mixin:0.8.5:processor"
}

mixin {
    add sourceSets.main, "rimine.refmap.json"
}

repositories {
    maven { url "https://maven.minecraftforge.net/" }
    maven { url "https://repo.spongepowered.org/repository/maven-public/" }
}

apply plugin: "maven-publish"
